--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comprovante de Recebimento</title>
+  <title>Comprovante de Pagamento</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
   <div class="comprovante-container">
-    <h1>Comprovante de Recebimento</h1>
+    <h1>Comprovante de Pagamento</h1>
 
     <div class="informacoes">
       <p><span>Data:</span> <span id="data-atual"></span></p>
-      <p><span>Valor Recebido:</span> R$ 1.000,00</p>
-      <p><span>De:</span> João Silva de Oliveira</p>
-      <p><span>Status:</span> Recebido com Sucesso</p>
+      <p><span>Valor Enviado:</span> R$ 500/p>
+      <p><span>De:</span> Juan Pablo Boluda</p>
+      <p><span>Status:</span> Pix realizado com Sucesso</p>
     </div>
 
     <button class="botao" onclick="window.print()">Imprimir</button>
