--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <div class="informacoes">
       <p><span>Data:</span> <span id="data-atual"></span></p>
-      <p><span>Valor Enviado:</span> R$ 500/p>
-      <p><span>De:</span> Juan Pablo Boluda</p>
+      <p><span>Valor Enviado:</span> R$ 2.900,00/p>
+      <p><span>De:</span> Alisson Santos</p>
       <p><span>Status:</span> Pix realizado com Sucesso</p>
     </div>
 
